# rag-eval-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  eval.yml  security.yml
src/evaluation/: datasets.py  judges.py  metrics.py  reporter.py
src/utils/: config.py  security.py
